# Ystring

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxygen  LICENSE.txt  README.md  TODO.md  install.sh
Examples/: CMakeLists.txt  PrintPath.cpp  PrintPathWin.cpp  Title.cpp  Upper.cpp
Miscellaneous/: BenchmarkUpperCase.cpp  CMakeLists.txt  MakeRandomText.cpp  Random.cpp  Random.hpp  Timer.hpp
UnitTest/: CMakeLists.txt  main.cpp  test_EncodingInfo.cpp
UnitTest/Conversion/: test_Converter.cpp
UnitTest/Generic/: test_Convert.cpp  test_GenericString.cpp
UnitTest/Streaming/: test_StreamFill.cpp  test_StreamJoin.cpp
UnitTest/Unicode/: test_CaseConverter.cpp  test_CaseInsensitive.cpp  test_CharClass.cpp  test_CharMap.cpp  test_CharMappingTypes.cpp
UnitTest/Utf16/: test_DecodeUtf16.cpp  test_EncodeUtf16.cpp  test_Utf16String.cpp  test_Utf16WString.cpp
UnitTest/Utf32/: test_Utf32String.cpp
UnitTest/Utf8/: test_DecodeUtf8.cpp  test_EncodeUtf8.cpp  test_Utf8String.cpp  test_Utf8StringCpp11.cpp
UnitTest/Ytest/: CMakeLists.txt  Ytest.hpp
UnitTest/Ytest/Ystring/: CMakeLists.txt  DecoderResult.hpp  Endianness.hpp  EscapeType.hpp  FindFlags.hpp  PlatformDetails.hpp  Predicates.cpp  PrivatePlatformDetails.hpp  Utf8.hpp  YstringDefinitions.hpp
UnitTest/Ytest/Ystring/Conversion/: AbstractDecoder.hpp  Converter.cpp
UnitTest/Ytest/Ystring/Encoded/: Appender.hpp  DecoderAlgorithms.hpp  DecoderStringFunctions-impl.hpp  DecoderStringFunctions.hpp  Encoder.hpp  ForwardDecoder.hpp  ReverseDecoder.hpp
UnitTest/Ytest/Ystring/Encodings/: DecodeUtf16.hpp  DecodeUtf32-impl.hpp  DecodeUtf8.hpp
UnitTest/Ytest/Ystring/Generic/: Appender.hpp  DecoderStringFunctions-impl.hpp  GenericString-impl.hpp  GenericString.hpp  RangeAlgorithms.hpp  StringReference.hpp  StringTypeTraits.hpp
UnitTest/Ytest/Ystring/Streaming/: StreamOperators.hpp
UnitTest/Ytest/Ystring/Unicode/: CaseConverter.cpp  CaseConverter.hpp  CaseInsensitive.hpp  CharClass.cpp  CharClass.hpp  CharMap.cpp  CharMap.hpp  CharMappingTypes.cpp  CharMappingTypes.hpp  UnicodeChars.hpp  UnicodePredicates.hpp
UnitTest/Ytest/Ystring/Utf16/: DecodeUtf16-impl.hpp  DecodeUtf16.hpp  EncodeUtf16-impl.hpp  EncodeUtf16.hpp  Utf16Encoding.hpp
UnitTest/Ytest/Ystring/Utf32/: DecodeUtf32-impl.hpp  DecodeUtf32.hpp  EncodeUtf32-impl.hpp  EncodeUtf32.hpp  Utf32Encoding.hpp
UnitTest/Ytest/Ystring/Utf8/: DecodeUtf8-impl.hpp  DecodeUtf8.hpp  EncodeUtf8-impl.hpp  EncodeUtf8.cpp  EncodeUtf8.hpp  Utf8Chars.hpp  Utf8Encoding.hpp  Utf8String.cpp  Utf8String.hpp
UnitTest/Ytest/Ystring/Utilities/: Algorithms.hpp  Endian.hpp  Iterators.hpp  KeyFunctionAlgorithms.hpp  Union16.hpp  Union32.hpp  Utilities.hpp
UnitTest/Ytest/Ytest/: AutoTest.cpp  AutoTest.hpp  AutoTestRunner.cpp  AutoTestRunner.hpp  Comparers.hpp  Error.cpp  Error.hpp  Exceptions.cpp  Exceptions.hpp  Formatters.cpp  Formatters.hpp  Indentation.cpp  Indentation.hpp  JUnitReport.cpp  JUnitReport.hpp  MacroUtilities.cpp  MacroUtilities.hpp  Macros.hpp  ParseArguments.cpp  ParseArguments.hpp  PathFilter.cpp  PathFilter.hpp  Session.cpp  Session.hpp  StreamRedirection.cpp  StreamRedirection.hpp  Test.cpp  Test.hpp  TestScope.hpp  TextReport.cpp  TextReport.hpp  VisualStudioReport.cpp  VisualStudioReport.hpp  XmlWriter.cpp  XmlWriter.hpp
Ystring/: DecoderResult.hpp  Encoding.hpp  EncodingInfo.cpp  EncodingInfo.hpp  Endianness.hpp  EscapeType.hpp  FindFlags.hpp  PlatformDetails.hpp  Predicates.cpp  Predicates.hpp  PrivatePlatformDetails.hpp  SplitFlags.hpp  Template for OBJECT CMakeLists.txt  Utf16.hpp  Utf16W.hpp  Utf32.hpp  Utf8.hpp  YstringDefinitions.hpp  YstringException.cpp  YstringException.hpp
Ystring/CodePage/: CodePage.cpp  CodePage.hpp  CodePageEncoding.hpp  CodePageFactory.cpp  CodePageFactory.hpp  Cp437.cpp  Cp437.hpp  Cp850.cpp  Cp850.hpp  Ibm437.cpp  Ibm437.hpp  Ibm850.cpp  Ibm850.hpp  Iso8859_1.cpp  Iso8859_1.hpp  Iso8859_10.cpp  Iso8859_10.hpp  Iso8859_15.cpp  Iso8859_15.hpp  Iso8859_9.cpp  Iso8859_9.hpp  Windows1250.cpp  Windows1250.hpp  Windows1252.cpp  Windows1252.hpp
Ystring/Conversion/: AbstractDecoder.cpp  AbstractDecoder.hpp  (+22 more)
YstringTest/: CMakeLists.txt
examples/: CMakeLists.txt  PrintPath.cpp  Title.cpp  Upper.cpp
extras/BenchmarkUpperCase/: CMakeLists.txt  Random.cpp
extras/BenchmarkUpperCase/release/: BenchmarkUpperCase  CMakeCache.txt  MakeRandomText  Makefile  cmake_install.cmake
misc/BenchmarkUpperCase/: CMakeLists.txt  Result of optimizing Utf8_upper.txt
scripts/: codegen.py  make_case_convert_file.py  make_char_class_file.py
tests/YstringTest/: CMakeLists.txt  main.cpp  test_EncodingInfo.cpp
tests/YstringTest/Conversion/: test_Converter.cpp
tests/YstringTest/Generic/: test_Convert.cpp  test_GenericString.cpp
tests/YstringTest/Streaming/: test_StreamFill.cpp  test_StreamJoin.cpp
tests/YstringTest/Unicode/: test_CaseConverter.cpp  test_CaseInsensitive.cpp  test_CharClass.cpp  test_CharMap.cpp  test_CharMappingTypes.cpp
tests/YstringTest/Utf/: test_DecodeUtf16.cpp  test_DecodeUtf8.cpp  test_EncodeUtf16.cpp  test_EncodeUtf8.cpp  test_Utf16String.cpp  test_Utf16WString.cpp  test_Utf32String.cpp  test_Utf8String.cpp  test_Utf8StringCpp11.cpp
tests/YstringTest/Utf16/: test_EncodeUtf16.cpp  test_Utf16String.cpp  test_Utf16WString.cpp
tests/YstringTest/Utf8/: test_Utf8String.cpp
tests/YstringTest/Ytest/: CMakeLists.txt
tests/YstringTest/Ytest/Ystring/: YstringDefinitions.hpp
tests/YstringTest/Ytest/Ystring/Encodings/: DecodeUtf16-impl.hpp  DecodeUtf16.hpp  DecodeUtf32-impl.hpp  EncodeUtf8.hpp
tests/YstringTest/Ytest/Ystring/Generic/: DecoderStringFunctions.hpp  GenericConvert.hpp  GenericString-impl.hpp
tests/YstringTest/Ytest/Ystring/Streaming/: StreamOperators.cpp
tests/YstringTest/Ytest/Ystring/Unicode/: CaseConverter.hpp  CharMap.cpp  CharMappingTypes.hpp
tests/YstringTest/Ytest/Ystring/Utilities/: Endian.hpp  Iterators.hpp  Utilities.hpp
tests/YstringTest/Ytest/Ytest/: AutoTest.cpp  Comparers.hpp  Error.hpp  Formatters.cpp  JUnitReport.cpp  Macros.hpp  PathFilter.cpp  Test.cpp  VisualStudioReport.hpp
(+270 files in other folders)
